--- a/ejs/public/index.html
+++ b/ejs/public/index.html
@@ -26,6 +26,11 @@
             </div>
             <button type="submit" id="enviar" class="btn">Enviar</button>
         </form>
+
+        <form action="/api/productos" method="get">
+            <button type="submit" id="vista" class="btn">Ver productos</button>
+        </form>
+
     </div>
 </body>
 
